src/app.scss
@font-face {
  src: url(./assets/fonts/Noto_Sans/normal.ttf) format('truetype');
  font-family: Noto Sans;
  font-style: normal;

  font-optical-sizing: auto;
  font-variation-settings: "wdth" 100;
}

* {
  box-sizing: border-box;
  font-family: 'Noto Sans';
}

html,
body {
  margin: 0;
  padding: 0;
  // font-family: 'EB Garamond', 'Times New Roman', Times, serif;
}

html {
  position: relative;
  min-height: 100%;
}

body {
  color: rgb(193, 193, 193);
  background: rgb(10, 10, 10);
}

.main-body {
  width: 100%;
  margin-bottom: 5rem;
}

.contents {
  width: 100%;
  margin: auto;
  max-width: 1000px;
  padding-left: 1rem;
  padding-right: 1rem;
}

/* Define the fonts for the following components */
h1,
h2 {
  color: white;
}

h1,
h2,
h3,
h4,
p,
ul {
  font-weight: normal;
}

p {
  font-size: 1.15em;
  font-style: normal;
  font-variant: normal;
  margin-top: 15px;
  margin-bottom: 15px;
}

h1, h2, h3 {
  font-weight: bold;
}

h1 {
  font-size: 3rem;
  text-align: center;
}

h2 {
  font-size: 2rem;
}

h3 {
  font-style: italic;
  margin-top: 25px;
  margin-bottom: 5px;
}

h4 {
  font-style: italic;
  margin-top: 0px;
  margin-bottom: 0px;
}

a {
  opacity: 0.75;
  color: rgb(33, 156, 250);
  font-style: italic;
  text-decoration: underline;
  transition: 100ms opacity;
}

a:hover {
  opacity: 1;
}

#app {
  background-size: 50vw auto;
  background-position: center;
  background-attachment: fixed;
  background-image: url(@/assets/stars.jpg);
  background-color: rgba(0, 0, 0, 0.5);
  background-blend-mode: darken;
}

// Instead of <center>
.center {
  display: flex;
  justify-content: center;
  align-items: center;
}

// Call to action button (primary button)
.cta {
  all: unset;

  cursor: pointer;
  background: white;
  color: black;
  font-weight: bold;
  
  width: fit-content;
  display: inline-flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  gap: 0.5em;

  margin: 2em 0;
  padding: 0.5em 2em;
  border-radius: 2em;
  
  transition: 100ms all;
}

.cta:disabled {
  cursor: unset;
  opacity: 0.25;
}

.cta:not(:disabled):hover {
  scale: 1.05;
  background: rgb(28, 126, 161);
  color: white;
}

// Show description of spex next to poster
.image_and_desc {
  display: flex;
  gap: 2rem;
}

@media screen and (max-width: 651px) {
  .image_and_desc {
    flex-direction: column;
    align-items: center;
  }
}

